# Careeros

./: .gitignore  AGENTS.MD  README.md  docker-compose.yaml  docker-readme.md
apps/: README.md
apps/bff/: .dockerignore  Dockerfile  README.md  package.json  tsconfig.json
apps/bff/prisma/: schema.prisma
apps/bff/src/: app.module.ts  main.ts
apps/bff/src/auth/: auth.constants.spec.ts  auth.constants.ts  auth.controller.ts  auth.guard.spec.ts  auth.guard.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  current-user.decorator.ts
apps/bff/src/database/: database.service.ts
apps/bff/src/jobs/: job-application.service.ts  jobs.controller.ts  jobs.module.ts
apps/bff/src/queue/: dequeue.service.ts  enqueue.service.ts  queue.module.ts
apps/bff/src/rabbitmq/: rabbitmq.module.ts  (+1 more)
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  styles.css
docs/: README.md  architecture-source-of-truth.md  high-level.md  template-architecture.md  ws-to-ui-flow.md
docs/sarath-docs/: rabbitmq-figures.md  rabbitmq-flow.md  websocket-flow.md
scripts/local/: README.md  local_start
services/ai/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
services/ai/src/: app.py  openai_provider.py  orchestrator.py
services/ai/src/infrastructure/: __init__.py  rabbit_manager.py
services/ai/src/services/: __init__.py  checklist.py  resume.py
services/ai/src/types/: __init__.py  checklist.py  message_types.py
services/infra/rabbitmq/: docker-compose.yml
(+101 files in other folders)
