[project]
name = "ai"
version = "0.1.0"
description = "AI service with LLM provider abstraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.7",
    "fastapi[standard]>=0.116.1",
    "ollama>=0.5.3",
    "openai>=1.108.2",
    "python-docx>=1.1.2",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "transformers>=4.56.1",
    "coloredlogs>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
